--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.application.name=carrito
-rabbitmq.exchange=pedidosExchange
-rabbitmq.routing-key=pedidosKey
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
 server.port=8081
